created_at, timer validate fix, reset fix
